# test-art-task

./: .dockerignore  .gitignore  Dockerfile  README.md  db.py  fly.toml  main.py  models.py  pilot.py  stimuli.py
backend/: .env.example  pyproject.toml
backend/app/: main.py  models.py  stimuli.py
backend/app/stimuli/: artworks.json
backend/scripts/: dump_session.py
frontend/: index.html  package.json
frontend/src/: App.tsx  PilotApp.tsx  api.ts  main.tsx  timeline.ts
frontend/src/components/: TimelineRunner.tsx
