[project]
name = "social-influence-backend"
version = "0.1.0"
description = "Backend for the Social Influence Task"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
